--- a/Machine Learning/LatexSourceFile/MachineLearning.tex
+++ b/Machine Learning/LatexSourceFile/MachineLearning.tex
@@ -1024,7 +1024,7 @@ the formula can be rewritten as\begin{equation}
 we define the \textbf{Bayes optimal classifier} as the following function\begin{equation}
     v_{OB}(x)=\arg\max_{v_j\in V}\sum_{h_i\in H}\Prob(v_j|x,h_i)\Prob(h_i|D)
 \end{equation}
-usually, this is impracticable because we may can't enumerate all the possible hypothesis, or the hypothesis space could be too big. There is an example, Le'ts say that we have three possible hypothesis $h_1,h_2,h_3$ such that
+usually, this is impracticable because we may can't enumerate all the possible hypothesis, or the hypothesis space could be too big. There is an example, Let's say that we have three possible hypothesis $h_1,h_2,h_3$ such that
 \begin{align*}
 \Prob(h_1|D) &= 0.4, & \Prob(\ominus|x, h_1) &= 0, & \Prob(\oplus|x, h_1) &= 1 \\
 \Prob(h_2|D) &= 0.3, & \Prob(\ominus|x, h_2) &= 1, & \Prob(\oplus|x, h_2) &= 0 \\
