--- a/Machine Learning/LatexSourceFile/MachineLearning.tex
+++ b/Machine Learning/LatexSourceFile/MachineLearning.tex
@@ -1578,6 +1578,10 @@ we want to use a compact notation, adding a component to the vector $\mathbf x$:
 so\begin{equation}
     \mathbf w^T\mathbf x +w_0=\tilde{\mathbf w}^T\tilde{\mathbf x}=w_0+w_1x_1\dots w_dx_d.
 \end{equation}
+In general, we have an error function $E(\mathbf w)$ that we want to minimize\begin{equation}
+    \mathbf w^*=\arg\min_{\mathbf w}E(\mathbf w)
+\end{equation} 
+
 \end{document}
 
 
