Generalize joint velocity notation in Jacobian matrix
Replaced explicit joint velocity components with a generalized notation using \vdots and \dot\theta_n in the matrix equation. This clarifies that the Jacobian applies to an arbitrary number of joints, not just three.

--- a/Robotics 1/LatexSourceFile/Robotics1.tex
+++ b/Robotics 1/LatexSourceFile/Robotics1.tex
@@ -175,7 +175,7 @@ it can be written in matrix form\begin{equation}
         \mathbf j_1(\btheta)&\dots&\mathbf j_n(\btheta)\\
         &&
     \end{pmatrix}\begin{pmatrix}
-        \dot\theta_1\\\dot\theta_2\\\dot\theta_3
+        \dot\theta_1\\\vdots\\\dot\theta_n
     \end{pmatrix}
 \end{equation}
 where $J_L(\btheta)$ is a $3\times n$ matrix called the \textbf{Jacobian Matrix}, where $n$ is the number of joints. This description were given in terms of the linear velocity, but it holds also for the angular velocity of the end effector, indeed we have two Jacobian Matrix:\begin{itemize}
