--- a/Machine Learning/LatexSourceFile/MachineLearning.tex
+++ b/Machine Learning/LatexSourceFile/MachineLearning.tex
@@ -1559,6 +1559,7 @@ what are the size (number of parameters) of the generative model? We have the pr
 \end{equation}
 then we have $K$ vectors $\bmu_K$, of each $k$-th Gaussian distribution, since each vector have $d$ real components, we have a total of $kd$ parameter. In the end, we have 
 \section{Discriminative Models}
+\redText{TODO}
 \chapter{Linear Models}
 A linear function on $\mathbf x$ is represented as follows\begin{equation}
     \mathbf w^T\mathbf x+w_0
